2 exercises added in arrays

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,11 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Arrays/.vs/Arrays/v17/.suo
+/Arrays/.vs/Arrays/DesignTimeBuild/.dtbcache.v2
+/Arrays/.vs/Arrays/FileContentIndex/9100e07b-b923-4caf-8ba9-da5dee4c5432.vsidx
+/Arrays/.vs/Arrays/v17/.futdcache.v2
+/Arrays/.vs/ProjectEvaluation/arrays.metadata.v7.bin
+/Arrays/.vs/ProjectEvaluation/arrays.projects.v7.bin
+/Arrays/.vs/Arrays/FileContentIndex/dd2da845-976e-412d-853a-b55dc6e60141.vsidx
+/Arrays/KaminoFactory
